--- a/styles.css
+++ b/styles.css
@@ -3,19 +3,24 @@ body {
     background-color: #f5f5f5;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 header {
-    background-color: #007acc;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #31a1ec;
     color: white;
-    text-align: center;
     padding: 10px 0;
+}
+
+header h1 {
+    margin-left: 5%;
 }
 
 main {
     max-width: 800px;
     height: 50vh;
-    margin: 20px auto;
+    margin: 3% auto;
     background-color: white;
     padding: 20px;
     border-radius: 5px;
@@ -27,13 +32,12 @@ main {
     align-items: normal;
     width: 100%;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 .language-selector {
-    width: 45%;
-    margin: 1%;
+    width: 46%;
 }
 
 .language-selector select {
@@ -49,6 +53,7 @@ main {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    max-height: 600px;
 }
 
 .translate-button-container {
@@ -78,6 +83,7 @@ footer {
 .text-container {
     display: flex;
     height: 70%;
+    margin-top: 2%;
 }
 
 textarea {
